--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -29,6 +29,8 @@ header {
       font-size: 30px;
       a {
         margin-left: 1.2rem;
+        text-decoration: none;
+        color: black;
       }
       @include mQ(768px) {
         display: none;
@@ -69,6 +71,8 @@ header {
   }
   a {
     margin: 25px 15px 0 15px;
+    color: black;
+    text-decoration: none;
     @include mQ(650px) {
       margin-top: 4vw;
       font-size: 5vw;
