--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -80,3 +80,19 @@ header {
     }
   }
 }
+
+.grid-container {
+  .grid-item {
+    h1 {
+      font-size: 10vw;
+      margin: 5vw 0 5vw 5vw;
+    }
+    p {
+      font-size: 8vw;
+      margin: 0 0 5vw 5vw;
+    }
+    img {
+      width: 100%;
+    }
+  }
+}
