--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  // border: 2px solid red;
 }
 
 @mixin mQ($arg){
@@ -56,7 +57,6 @@ header {
 }
 
 .pages {
-
   display: flex;
   flex-direction: row;
   font-size: 40px;
@@ -82,14 +82,48 @@ header {
 }
 
 .grid-container {
+  display: grid;
+  grid-template-columns: auto;
+  @include mQLG(768px) {
+    grid-template-columns: auto auto;
+    grid-template-areas: "gi1 gi2" "gi3 gi3";
+  }
+  .gi1 { grid-area: gi1; }
+  .gi2 { grid-area: gi2; }
+  .gi3 { grid-area: gi3; }
+  .gi1 {
+    margin-top: 10vw;
+    @include mQLG(768px) {
+      margin: 0;
+      height: 280px;
+    }
+  }
+  .gi3 {
+    display: flex;
+    flex-direction: row;
+    @include mQLG(768px) {
+      height: 280px;
+    }
+  }
   .grid-item {
+    @include mQLG(768px) {
+      margin: 0;
+    }
     h1 {
       font-size: 10vw;
       margin: 5vw 0 5vw 5vw;
+      @include mQLG(768px) {
+        font-size: 5vw;
+        margin: 0;
+      }
     }
     p {
       font-size: 8vw;
       margin: 0 0 5vw 5vw;
+      @include mQLG(768px) {
+        font-size: 3vw;
+        margin: 0;
+      }
     }
     img {
       width: 100%;
