--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,7 +2,6 @@
 * {
   margin: 0;
   padding: 0;
-  // border: 2px solid red;
 }
 
 @mixin mQ($arg){
@@ -84,7 +83,10 @@ header {
 .grid-container {
   display: grid;
   grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+  grid-template-areas: "gi1" "gi2" "gi3";
   @include mQLG(768px) {
+    margin: 5vw 5vw 5vw 5vw;
     grid-template-columns: auto auto;
     grid-template-areas: "gi1 gi2" "gi3 gi3";
   }
@@ -100,9 +102,13 @@ header {
   }
   .gi3 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     @include mQLG(768px) {
       height: 280px;
+      flex-direction: row;
+      img {
+        width: 60vw;
+      }
     }
   }
   .grid-item {
@@ -125,8 +131,8 @@ header {
         margin: 0;
       }
     }
-    img {
-      width: 100%;
-    }
+  }
+  img {
+    width: 100%;
   }
 }
