--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  // border: 2px solid red;
 }
 
 @mixin mQ($arg){
@@ -87,7 +88,9 @@ header {
   grid-template-areas: "gi1" "gi2" "gi3";
   @include mQLG(768px) {
     margin: 5vw 5vw 5vw 5vw;
-    grid-template-columns: auto auto;
+    grid-column-gap: 2vw;
+    grid-template-columns: 1.2fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-areas: "gi1 gi2" "gi3 gi3";
   }
   .gi1 { grid-area: gi1; }
@@ -97,29 +100,45 @@ header {
     margin-top: 10vw;
     @include mQLG(768px) {
       margin: 0;
-      height: 280px;
+      display: flex;
+      flex-direction: column;
+      img {
+        height: 100%;
+      }
+    }
+  }
+  .gi2 {
+    @include mQLG(768px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      img {
+        width: 100%;
+        height: 80%;
+      }
     }
   }
   .gi3 {
     display: flex;
     flex-direction: column;
+    margin-top: 1vw;
     @include mQLG(768px) {
       height: 280px;
       flex-direction: row;
       img {
-        width: 60vw;
+        width: 60%;
       }
     }
   }
   .grid-item {
     @include mQLG(768px) {
-      margin: 0;
+      height: 30vw;
     }
     h1 {
       font-size: 10vw;
       margin: 5vw 0 5vw 5vw;
       @include mQLG(768px) {
-        font-size: 5vw;
+        font-size: 3.5vw;;
         margin: 0;
       }
     }
