--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -17,6 +17,7 @@
   }
 }
 
+//main page
 header {
   .top {
     display: flex;
@@ -153,5 +154,50 @@ header {
   }
   img {
     width: 100%;
+  }
+}
+
+//contact page
+.grid-box {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+  grid-template-areas: "b1" "b2" "b3";
+  @include mQLG(768px) {
+    margin: 5vw 5vw 5vw 5vw;
+    grid-column-gap: 2vw;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: .5fr 1fr;
+    grid-template-areas: "b1 b2" "b3 b3";
+  }
+  .b1 { grid-area: b1; }
+  .b2 { grid-area: b2; }
+  .b3 { grid-area: b3; }
+  .box-item {
+    h1 {
+      font-size: 6vw;
+      margin: 5vw 0 0 5vw;
+      @include mQLG(768px) {
+        margin: 0;
+        font-size: 3vw;
+      }
+    }
+    p {
+      font-size: 5vw;
+      margin: 2vw 0 0 5vw;
+      @include mQLG(768px) {
+        margin: 0;
+        font-size: 3vw;
+      }
+    }
+    img {
+      width: 100%;
+      height: 50vw;
+      margin: 15vw 0 0 0;
+      @include mQLG(768px) {
+        margin: 0;
+        height: 100%;
+      }
+    }
   }
 }
