--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -201,3 +201,21 @@ header {
     }
   }
 }
+
+//member page
+.amen-body {
+  h1 {
+    font-size: 8vw;
+    margin: 5vw 5vw 0 5vw;
+  }
+  .amen-p {
+    font-size: 5vw;
+    margin: 5vw 5vw 5vw 5vw;
+  }
+  img {
+    display: block;
+    margin-left: -50%;
+    margin-right: auto;
+    height: 75vw;
+  }
+}
