add desktop member pg

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -233,13 +233,17 @@ header {
 
 //member page
 .member-pg {
-  p {
-    font-size: 5vw;
+  h1 {
+    font-size: 4.5vw;
     text-align: center;
     margin: 5vw 0 5vw 0;
   }
   img {
     width: 300vw;
     margin-left: -50%;
+    @include mQLG(768px){
+      width: 105vw;
+      margin-left: 0;
+    }
   }
 }
